Finish var-checking using aho-corasick algorithm